# pokedex-agent

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
scripts/: refresh_data.py
src/: __init__.py  agent.py  cli.py  db.py  etl.py  models_utility.py  prompts.py  tools.py
tests/: conftest.py  test_agent_logic.py  test_cli.py  test_db.py  test_etl.py  test_integration_queries.py  test_prompts.py  test_tools.py
